2014-02-16  Dan Bernstein  <mitz@apple.com>

        Speculative iOS build fix.

        * WebProcess/WebPage/mac/PageBannerMac.mm:

2014-02-16  Dan Bernstein  <mitz@apple.com>

        Speculative iOS build fix.

        * WebProcess/WebPage/PageBanner.h:

2014-02-16  Dan Bernstein  <mitz@apple.com>

        Stop using PLATFORM(MAC) in Source except where it means “OS X but not iOS”
        https://bugs.webkit.org/show_bug.cgi?id=128885

        Reviewed by Anders Carlsson.

        * Configurations/WebKit2.xcconfig: Removed PageBannerMac.mm and WKBundlePageBannerMac.mm
        from EXCLUDED_SOURCE_FILE_NAMES_iphoneos, now that these files are guarded with
        !PLATFORM(IOS).
        * WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp: Changed PLATFORM(MAC) to
        PLATFORM(COCOA).
        (WKBundleFrameCopyWebArchiveFilteringSubframes):
        * WebProcess/InjectedBundle/API/c/mac/WKBundlePageBannerMac.mm: Guarded with !PLATFORM(IOS).
        * WebProcess/InjectedBundle/InjectedBundle.cpp: Changed PLATFORM(MAC) to PLATFORM(COCOA).
        (WebKit::InjectedBundle::setPrivateBrowsingEnabled):
        * WebProcess/InjectedBundle/InjectedBundle.h: Changed PLATFORM(MAC) to USE(FOUNDATION)
        around use of NSBundle.
        * WebProcess/InjectedBundle/InjectedBundleUserMessageCoders.h: Changed PLATFORM(MAC) to
        PLATFORM(COCOA).
        (WebKit::InjectedBundleUserMessageEncoder::encode):
        (WebKit::InjectedBundleUserMessageDecoder::decode):
        * WebProcess/Network/WebResourceLoader.cpp: Ditto.
        (WebKit::WebResourceLoader::didReceiveResponseWithCertificateInfo):
        * WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp: Ditto.
        (WebKit::NPN_GetValue):
        (WebKit::NPN_SetValue):
        (WebKit::initializeBrowserFuncs):
        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp: Ditto.
        (WebKit::NetscapePlugin::NetscapePlugin):
        (WebKit::NetscapePlugin::supportsSnapshotting):